tests/snapshots/bundle_rules@stable_rust-Plain.snap
---
source: src/compute_rules.rs
info:
  bundle_name: stable_rust
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: false
    inherited_ref_on_ref: EatBoth
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: ResetBindingMode
    rules_display_style: Plain
---
p0 @ q.0: T0,  p1 @ q.1: T1
--------------------------- "Constructor"
[p0, p1] @ q: [T0, T1]

p0 @ &(*q).0: &T0,  p1 @ &(*q).1: &T1
------------------------------------- "ConstructorRef"
[p0, p1] @ q: &[T0, T1]

p0 @ &mut (*q).0: &mut T0,  p1 @ &mut (*q).1: &mut T1
----------------------------------------------------- "ConstructorRef"
[p0, p1] @ q: &mut [T0, T1]

[p0, p1] @ *q: &T
----------------- "ConstructorMultiRef"
[p0, p1] @ q: &&T

[p0, p1] @ &**q: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ q: &&mut T

[p0, p1] @ *q: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ q: &mut &T

[p0, p1] @ &mut **q: &mut T
--------------------------- "ConstructorMultiRef"
[p0, p1] @ q: &mut &mut T

p @ *q: T
-------------------------------- "Deref(EatOuter)"
&p @ q: &T, q is not a reference

p @ *q: T
---------------------------------------- "Deref(EatOuter)"
&mut p @ q: &mut T, q is not a reference

p @ *q: T
------------ "Deref(EatBoth)"
&p @ &q: &&T

p @ *q: T
-------------------- "Deref(EatBoth)"
&p @ &mut q: &mut &T

p @ *q: T
-------------------- "Deref(EatBoth)"
&mut p @ &q: &&mut T

p @ *q: T
---------------------------- "Deref(EatBoth)"
&mut p @ &mut q: &mut &mut T

ref x @ q: T
-------------- "RefBindingResetBindingMode"
ref x @ &q: &T

ref x @ q: T
---------------------- "RefBindingResetBindingMode"
ref x @ &mut q: &mut T

ref mut x @ q: T
------------------ "RefBindingResetBindingMode"
ref mut x @ &q: &T

ref mut x @ q: T
-------------------------- "RefBindingResetBindingMode"
ref mut x @ &mut q: &mut T

mut x @ q: T
-------------- "MutBindingResetBindingMode"
mut x @ &q: &T

mut x @ q: T
---------------------- "MutBindingResetBindingMode"
mut x @ &mut q: &mut T

x @ &q: &T
---------------------------------- "BindingBorrow"
ref x @ q: T, q is not a reference

x @ &mut q: &mut T
-------------------------------------- "BindingBorrow"
ref mut x @ q: T, q is not a reference

let x: T = q
------------ "Binding"
x @ q: T

let mut x: T = q
---------------------------------- "Binding"
mut x @ q: T, q is not a reference
