tests/snapshots/bundle_rules@stateless-Plain.snap
---
source: src/compute_rules.rs
info:
  bundle_name: stateless
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    rules_display_style: Plain
---
p0 @ e.0: T0,  p1 @ e.1: T1
--------------------------- "Constructor"
[p0, p1] @ e: [T0, T1]

p0 @ &(*e).0: &T0,  p1 @ &(*e).1: &T1
------------------------------------- "ConstructorRef"
[p0, p1] @ e: &[T0, T1]

p0 @ &mut (*e).0: &mut T0,  p1 @ &mut (*e).1: &mut T1
----------------------------------------------------- "ConstructorRef"
[p0, p1] @ e: &mut [T0, T1]

[p0, p1] @ *e: &T
----------------- "ConstructorMultiRef"
[p0, p1] @ e: &&T

[p0, p1] @ &**e: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ e: &&mut T

[p0, p1] @ *e: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ e: &mut &T

[p0, p1] @ &mut **e: &mut T
--------------------------- "ConstructorMultiRef"
[p0, p1] @ e: &mut &mut T

p @ *e: T
---------- "Deref(EatOuter)"
&p @ e: &T

p @ *e: T
------------------ "Deref(EatOuter)"
&mut p @ e: &mut T

p @ *&*e: T
-------------- "DerefMutWithShared(EatOuter)"
&p @ e: &mut T

x @ &e: &T
------------ "BindingBorrow"
ref x @ e: T

x @ &mut e: &mut T
------------------ "BindingBorrow"
ref mut x @ e: T

let x: T = e
------------ "Binding"
x @ e: T

let mut x: T = e
---------------- "Binding"
mut x @ e: T
