tests/snapshots/bundle_rules@stateless-SequentBindingMode.snap
---
source: src/analyses/compute_rules.rs
info:
  bundle_name: stateless
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
---
move, m ⊢ p0: T0,  move, m ⊢ p1: T1
----------------------------------- "Constructor"
move, m ⊢ [p0, p1]: [T0, T1]

ref, ro ⊢ p0: T0,  ref, ro ⊢ p1: T1
----------------------------------- "ConstructorRef"
move, m ⊢ [p0, p1]: &[T0, T1]

ref, ro ⊢ p0: T0,  ref, ro ⊢ p1: T1
----------------------------------- "ConstructorRef"
ref, m ⊢ [p0, p1]: [T0, T1]

ref mut, m ⊢ p0: T0,  ref mut, m ⊢ p1: T1
----------------------------------------- "ConstructorRef"
move, m ⊢ [p0, p1]: &mut [T0, T1]

ref mut, m ⊢ p0: T0,  ref mut, m ⊢ p1: T1
----------------------------------------- "ConstructorRef"
ref mut, m ⊢ [p0, p1]: [T0, T1]

ref, ro ⊢ [p0, p1]: T
----------------------- "ConstructorMultiRef"
move, m ⊢ [p0, p1]: &&T

ref, ro ⊢ [p0, p1]: T
--------------------------- "ConstructorMultiRef"
move, m ⊢ [p0, p1]: &&mut T

ref, ro ⊢ [p0, p1]: T
--------------------- "ConstructorMultiRef"
ref, m ⊢ [p0, p1]: &T

ref, ro ⊢ [p0, p1]: T
------------------------- "ConstructorMultiRef"
ref, m ⊢ [p0, p1]: &mut T

ref, ro ⊢ [p0, p1]: T
--------------------------- "ConstructorMultiRef"
move, m ⊢ [p0, p1]: &mut &T

ref mut, m ⊢ [p0, p1]: T
------------------------------- "ConstructorMultiRef"
move, m ⊢ [p0, p1]: &mut &mut T

ref, ro ⊢ [p0, p1]: T
------------------------- "ConstructorMultiRef"
ref mut, m ⊢ [p0, p1]: &T

ref mut, m ⊢ [p0, p1]: T
----------------------------- "ConstructorMultiRef"
ref mut, m ⊢ [p0, p1]: &mut T

move, ro ⊢ p: T
---------------- "Deref"
move, m ⊢ &p: &T

move, ro ⊢ p: T
--------------- "Deref"
ref, m ⊢ &p: T

move, m ⊢ p: T
------------------------ "Deref"
move, m ⊢ &mut p: &mut T

move, m ⊢ p: T
---------------------- "Deref"
ref mut, m ⊢ &mut p: T

move, ro ⊢ p: T
-------------------- "DerefMutWithShared"
move, m ⊢ &p: &mut T

move, ro ⊢ p: T
------------------ "DerefMutWithShared"
ref mut, m ⊢ &p: T

ref, m ⊢ x: T
---------------- "BindingBorrow"
bm, m ⊢ ref x: T

ref mut, m ⊢ x: T
-------------------- "BindingBorrow"
bm, m ⊢ ref mut x: T


------------ "Binding"
bm, m ⊢ x: T


---------------- "Binding"
bm, m ⊢ mut x: T
