tests/snapshots/bundle_rules@stateless-SequentUserVisible.snap
---
source: src/analyses/compute_rules.rs
info:
  bundle_name: stateless
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
---
p0: T0,  p1: T1
------------------ "Constructor"
[p0, p1]: [T0, T1]

p0: &T0,  p1: &T1
------------------- "ConstructorRef"
[p0, p1]: &[T0, T1]

p0: &mut T0,  p1: &mut T1
------------------------- "ConstructorRef"
[p0, p1]: &mut [T0, T1]

[p0, p1]: &T
------------- "ConstructorMultiRef"
[p0, p1]: &&T

[p0, p1]: &T
----------------- "ConstructorMultiRef"
[p0, p1]: &&mut T

[p0, p1]: &T
----------------- "ConstructorMultiRef"
[p0, p1]: &mut &T

[p0, p1]: &mut T
--------------------- "ConstructorMultiRef"
[p0, p1]: &mut &mut T

p: T
------ "Deref"
&p: &T

p: T
-------------- "Deref"
&mut p: &mut T

p: T
---------- "DerefMutWithShared"
&p: &mut T

x: &T
-------- "BindingBorrow"
ref x: T

x: &mut T
------------ "BindingBorrow"
ref mut x: T


---- "Binding"
x: T


-------- "Binding"
mut x: T
